fixed issue causing dropdown navbar elems to be hidden (overflow)

--- a/domains/portfolio.aaronlademann.com/html/public/sass/partials/bootstrap/_responsive.scss
+++ b/domains/portfolio.aaronlademann.com/html/public/sass/partials/bootstrap/_responsive.scss
@@ -31,6 +31,7 @@
   visibility: hidden;
 }
 
+.nav-collapse { overflow: visible; } // so the dropdown menus will show up properly
 
 
 // UP TO LANDSCAPE PHONE
